docs/operators/minio-minimal-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: myminio-ingress-console
spec:
  ingressClassName: nginx
  rules:
  - host: myminio-console.dyn.cloud.e-infra.cz
    http:
      paths:
      - backend:
          service:
            name: myminio-console
            port:
              number: 9443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - myminio-console.dyn.cloud.e-infra.cz
    secretName: myminio-console-dyn-cloud-e-infra-cz-tls
status:
  loadBalancer:
    ingress:
    - hostname: kuba-pub.cerit-sc.cz
