docs/operators/minio-minimal-s3endpoint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  generation: 2
  name: minio-ingress-s3
spec:
  ingressClassName: nginx
  rules:
  - host: myminio-s3.dyn.cloud.e-infra.cz
    http:
      paths:
      - backend:
          service:
            name: myminio-hl
            port:
              number: 9000
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - myminio-s3.dyn.cloud.e-infra.cz
    secretName: myminio-s3-dyn-cloud-e-infra-cz-tls
